--- a/src/resources/resourceOrganization/settings/prod/resourceOrganizationSettings.json
+++ b/src/resources/resourceOrganization/settings/prod/resourceOrganizationSettings.json
@@ -1,31 +1,31 @@
 [
     {
         "connectivity": {
-            "name": "devExp-Connectivity-RG",
+            "name": "prodExp-Connectivity-RG",
             "description": "connectivity",
             "tags": {
-                "environment": "dev"
+                "environment": "prod"
             }
         },
         "identity": {
-            "name": "devExp-Identity-RG",
+            "name": "prodExp-Identity-RG",
             "description": "identity",
             "tags": {
-                "environment": "dev"
+                "environment": "prod"
             }
         },
         "management": {
-            "name": "devExp-Management-RG",
+            "name": "prodExp-Management-RG",
             "description": "management",
             "tags": {
-                "environment": "dev"
+                "environment": "prod"
             }
         },
         "workload": {
-            "name": "devExp-RG",
-            "description": "devExp",
+            "name": "prodExp-RG",
+            "description": "prodExp",
             "tags": {
-                "environment": "dev"
+                "environment": "prod"
             }
         }
     }
