--- a/src/resources/connectivity/settings/prod/networkSettings.json
+++ b/src/resources/connectivity/settings/prod/networkSettings.json
@@ -1,15 +1,18 @@
 {
-    "createVnet": true,
-    "virtualNetworkSettings": {
-        "name": "vnet1",
-        "addressPrefixes": [
-            "10.0.0.0/16"
-        ],
-        "subnets": [
-            {
-                "name": "subnet1",
-                "addressPrefix": "10.0.0.1/24"
+    "createVirtualNetwork": true,
+    "name": "vnet1",
+    "addressPrefixes": [
+        "10.0.0.0/16"
+    ],
+    "subnets": [
+        {
+            "name": "subnet1",
+            "properties": {
+                "addressPrefix": "10.0.0.0/24"
             }
-        ]
+        }
+    ],
+    "tags": {
+        "environment": "prod"
     }
 }
