--- a/src/resources/workload/devCenter/settings/prod/settings.json
+++ b/src/resources/workload/devCenter/settings/prod/settings.json
@@ -3,7 +3,7 @@
     "microsoftHostedNetworkEnableStatus": "Enabled",
     "installAzureMonitorAgentEnableStatus": "Enabled",
     "tags": {
-        "environment": "dev"
+        "environment": "prod"
     },
     "identity": {
         "type": "SystemAssigned",
