--- a/src/resources/connectivity/settings/prod/networkSettings.json
+++ b/src/resources/connectivity/settings/prod/networkSettings.json
@@ -7,10 +7,12 @@
     "subnets": [
         {
             "name": "subnet1",
-            "addressPrefix": "10.0.0.0/24"
+            "properties": {
+                "addressPrefix": "10.0.0.0/24"
+            }
         }
     ],
     "tags": {
-        "environment": "prod"
+        "environment": "dev"
     }
 }
