--- a/deploy/settings/workload/vmImageSettings-prod.json
+++ b/deploy/settings/workload/vmImageSettings-prod.json
@@ -1,12 +1,15 @@
-[
-    {
-        "imageDefinition": {
+{
+    "imageDefinitions": [
+        {
             "name": "backEndTemplate",
             "publisher": "Contoso",
             "offer": "BackEndEngineer",
-            "sku": "backEnd"
-        },
-        "imageTemplate": {
+            "sku": "backEnd",
+            "version": "1.0.0"
+        }
+    ],
+    "imageTemplates": [
+        {
             "source": {
                 "offer": "windows-11",
                 "publisher": "microsoftwindowsdesktop",
@@ -19,5 +22,5 @@
                 "vmSize": "Standard_DS1_v2"
             }
         }
-    }
-]
+    ]
+}
