--- a/deploy/settings/workload/settings.prod.json
+++ b/deploy/settings/workload/settings.prod.json
@@ -12,7 +12,10 @@
             "eb960402-bf75-4cc3-8d68-35b34f960f72",
             "18e40d4e-8d2e-438d-97e1-9528336e149c",
             "45d50f46-0b78-4001-a660-4198cbe8cd05",
-            "331c37c6-af14-46d9-b9f4-e1909e1b95a0"
+            "331c37c6-af14-46d9-b9f4-e1909e1b95a0",
+            "cf7c76d2-98a3-4358-a134-615aa78bf44d", 
+            "85a2d0d9-2eba-4c9c-b355-11c2cc0788ab", 
+            "1ef6a3be-d0ac-425d-8c01-acb62866290b"
         ],
         "userAssignedIdentities": {}
     },
@@ -42,20 +45,17 @@
             "tags": {
                 "environment": "dev"
             }
-        },
-        {
-            "name": "backEndEngineerCustom",
-            "image": "custom_microsoftvisualstudio_visualstudioplustools_vs-2022-ent",
-            "imageVersion": "latest",
-            "sku": "general_i_32c128gb512ssd_v2",
-            "hibernateSupport": "Disabled",
-            "default": false,
-            "tags": {
-                "environment": "dev"
-            }
         }
     ],
-    "devCenterCatalogs": [],
+    "devCenterCatalogs": [
+        {
+            "gitHub": true,
+            "name": "customTasks",
+            "uri": "https://github.com/Evilazaro/DevExp-DevBox.git",
+            "branch": "main",
+            "path": "deploy/settings/workload/tasks"
+        }
+    ],
     "projects": [
         {
             "identity": {
