replacing all tags

--- a/deploy/settings/connectivity/settings-prod.json
+++ b/deploy/settings/connectivity/settings-prod.json
@@ -19,10 +19,10 @@
         }
     ],
     "tags": {
-        "environment": "dev",
+        "environment": "prod",
         "division": "Platforms",
-        "team": "DevExp",
-        "project": "DevExp-DevBox",
+        "team": "prodExp",
+        "project": "prodExp-prodBox",
         "costCenter": "IT",
         "owner": "Evilazaro",
         "resources": "Network"
