--- a/deploy/settings/workload/settings.prod.json
+++ b/deploy/settings/workload/settings.prod.json
@@ -76,7 +76,7 @@
             "name": "customTasks",
             "uri": "https://github.com/Evilazaro/DevExp-DevBox.git",
             "branch": "main",
-            "path": "deploy/settings/workload/tasks"
+            "path": ".configuration/devcenter/tasks"
         }
     ],
     "projects": [
@@ -102,7 +102,7 @@
                     "name": "environments",
                     "uri": "https://github.com/Evilazaro/DevExp-DevBox.git",
                     "branch": "main",
-                    "path": "deploy/settings/workload/tasks"
+                    "path": ".configuration"
                 },
                 {
                     "gitHub": true,
@@ -120,7 +120,15 @@
                             "id": "b24988ac-6180-42a0-ab88-20f7382dd24c",
                             "properties": {}
                         }
-                    ]
+                    ],
+                    "tags": {
+                        "environment": "prod",
+                        "division": "Platforms",
+                        "team": "DevExp",
+                        "project": "DevExp-DevBox",
+                        "costCenter": "IT",
+                        "owner": "Evilazaro"
+                    }
                 },
                 {
                     "name": "prod",
@@ -129,7 +137,15 @@
                             "id": "b24988ac-6180-42a0-ab88-20f7382dd24c",
                             "properties": {}
                         }
-                    ]
+                    ],
+                    "tags": {
+                        "environment": "prod",
+                        "division": "Platforms",
+                        "team": "DevExp",
+                        "project": "DevExp-DevBox",
+                        "costCenter": "IT",
+                        "owner": "Evilazaro"
+                    }
                 },
                 {
                     "name": "staging",
@@ -138,9 +154,25 @@
                             "id": "b24988ac-6180-42a0-ab88-20f7382dd24c",
                             "properties": {}
                         }
-                    ]
+                    ],
+                    "tags": {
+                        "environment": "prod",
+                        "division": "Platforms",
+                        "team": "DevExp",
+                        "project": "DevExp-DevBox",
+                        "costCenter": "IT",
+                        "owner": "Evilazaro"
+                    }
                 }
-            ]
+            ],
+            "tags": {
+                "environment": "prod",
+                "division": "Platforms",
+                "team": "DevExp",
+                "project": "DevExp-DevBox",
+                "costCenter": "IT",
+                "owner": "Evilazaro"
+            }
         },
         {
             "name": "identityProvider",
@@ -164,7 +196,7 @@
                     "name": "environments",
                     "uri": "https://github.com/Evilazaro/DevExp-DevBox.git",
                     "branch": "main",
-                    "path": "deploy/settings/workload/tasks"
+                    "path": "./configuration/devcenter/tasks"
                 }
             ],
             "environments": [
@@ -202,7 +234,15 @@
                         "owner": "Evilazaro"
                     }
                 }
-            ]
+            ],
+            "tags": {
+                "environment": "prod",
+                "division": "Platforms",
+                "team": "DevExp",
+                "project": "DevExp-DevBox",
+                "costCenter": "IT",
+                "owner": "Evilazaro"
+            }
         }
     ],
     "environmentTypes": [
