--- a/deploy/settings/connectivity/settings-prod.json
+++ b/deploy/settings/connectivity/settings-prod.json
@@ -1,18 +1,18 @@
 {
     "createVirtualNetwork": true,
-    "name": "vnet1",
+    "name": "devexp",
     "addressPrefixes": [
         "10.0.0.0/16"
     ],
     "subnets": [
         {
-            "name": "subnet1",
+            "name": "eShop",
             "properties": {
                 "addressPrefix": "10.0.0.0/24"
             }
         },
         {
-            "name": "subnet2",
+            "name": "identityProvider",
             "properties": {
                 "addressPrefix": "10.0.1.0/24"
             }
@@ -21,8 +21,8 @@
     "tags": {
         "environment": "prod",
         "division": "Platforms",
-        "team": "prodExp",
-        "project": "prodExp-prodBox",
+        "team": "DevExp",
+        "project": "DevExp-DevBox",
         "costCenter": "IT",
         "owner": "Evilazaro",
         "resources": "Network"
