--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,6 +84,7 @@ jobs:
         id: deploy-dev-center
         run: |
           az deployment sub create  \
+            --location ${{ inputs.location }} \
             --template-file ./deploy/deploy.bicep \
             --parameters ./deploy/params.bicepparam \
             --parameters workloadName=${{ inputs.workloadName }} \
