--- a/infra/settings/resourceOrganization/settings-prod.json
+++ b/infra/settings/resourceOrganization/settings-prod.json
@@ -1,54 +1,58 @@
 {
     "connectivity": {
+        "create": true,
         "name": "Connectivity",
         "description": "connectivity",
         "tags": {
-        "environment": "prod",
-        "division": "Platforms",
-        "team": "DevExp",
-        "project": "DevExp-DevBox",
-        "costCenter": "IT",
-        "owner": "Evilazaro",
-        "landingZone": "Connectivity"
-    }
+            "environment": "prod",
+            "division": "Platforms",
+            "team": "DevExp",
+            "project": "DevExp-DevBox",
+            "costCenter": "IT",
+            "owner": "Evilazaro",
+            "landingZone": "Connectivity"
+        }
     },
     "identity": {
+        "create": true,
         "name": "Identity",
         "description": "identity",
         "tags": {
-        "environment": "prod",
-        "division": "Platforms",
-        "team": "DevExp",
-        "project": "DevExp-DevBox",
-        "costCenter": "IT",
-        "owner": "Evilazaro",
-        "landingZone": "Identity"
-    }
+            "environment": "prod",
+            "division": "Platforms",
+            "team": "DevExp",
+            "project": "DevExp-DevBox",
+            "costCenter": "IT",
+            "owner": "Evilazaro",
+            "landingZone": "Identity"
+        }
     },
     "management": {
+        "create": true,
         "name": "Management",
         "description": "management",
         "tags": {
-        "environment": "prod",
-        "division": "Platforms",
-        "team": "DevExp",
-        "project": "DevExp-DevBox",
-        "costCenter": "IT",
-        "owner": "Evilazaro",
-        "landingZone": "Management"
-    }
+            "environment": "prod",
+            "division": "Platforms",
+            "team": "DevExp",
+            "project": "DevExp-DevBox",
+            "costCenter": "IT",
+            "owner": "Evilazaro",
+            "landingZone": "Management"
+        }
     },
     "workload": {
+        "create": true,
         "name": "Workload",
         "description": "prodExp",
         "tags": {
-        "environment": "prod",
-        "division": "Platforms",
-        "team": "DevExp",
-        "project": "DevExp-DevBox",
-        "costCenter": "IT",
-        "owner": "Evilazaro",
-        "landingZone": "Workload"
-    }
+            "environment": "prod",
+            "division": "Platforms",
+            "team": "DevExp",
+            "project": "DevExp-DevBox",
+            "costCenter": "IT",
+            "owner": "Evilazaro",
+            "landingZone": "Workload"
+        }
     }
 }
