--- a/infra/settings/workload/settings.prod.json
+++ b/infra/settings/workload/settings.prod.json
@@ -26,7 +26,7 @@
         "userAssignedIdentities": {}
     },
     "computeGallery": {
-        "name": "contosoComputeGallery",
+        "name": "imageComputeGallery",
         "create": true,
         "tags": {
             "environment": "prod",
