--- a/infra/settings/connectivity/settings-prod.json
+++ b/infra/settings/connectivity/settings-prod.json
@@ -1,7 +1,6 @@
 {
     "create": true,
-    "resourceGroupName": "Connectivity", // Only used if create is true
-    "name": "devexp",
+    "name": "okn-eus-prd-okn-dev-box-spoke-vnet",
     "addressPrefixes": [
         "10.0.0.0/16"
     ],
